test: RecipeValidationTests 와 PlaybookRecipesTests 에 TestFactory 적용