@@ -1,9 +1,12 @@
 package com.eottabom.rewrite;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.DynamicTest;
+import org.junit.jupiter.api.TestFactory;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 import org.openrewrite.Recipe;
 import org.openrewrite.config.DeclarativeRecipe;
 import org.openrewrite.config.Environment;
@@ -18,29 +21,28 @@ class RecipeValidationTests {
 
 	private static final Environment ENV = Environment.builder().scanRuntimeClasspath().build();
 
-	@Test
-	void allCustomRecipesAreValid() {
+	@TestFactory
+	Stream<DynamicTest> allCustomRecipesAreValid() {
 		List<Recipe> customRecipes = ENV.listRecipes()
 			.stream()
 			.filter((r) -> r.getName().startsWith("com.eottabom.rewrite."))
 			// yml 레시피만 검증한다. 하위 레시피(옵션 포함)는 validateAll 로 함께 검증된다.
 			// 옵션이 필수인 Java 레시피는 classpath 스캔 시 빈 옵션으로 잡히므로 제외
 			.filter((r) -> r instanceof DeclarativeRecipe)
-			.collect(Collectors.toList());
+			.toList();
 
 		assertThat(customRecipes).isNotEmpty();
-		for (Recipe recipe : customRecipes) {
-			assertThat(recipe.validateAll()).as(recipe.getName())
-				.allSatisfy((v) -> assertThat(v.isValid()).as(recipe.getName() + " -> " + v).isTrue());
-		}
+		return customRecipes.stream()
+			.map((recipe) -> DynamicTest.dynamicTest(recipe.getName(),
+					() -> assertThat(recipe.validateAll()).as(recipe.getName())
+						.allSatisfy((v) -> assertThat(v.isValid()).as(recipe.getName() + " -> " + v).isTrue())));
 	}
 
-	@Test
-	void stageRecipesExist() {
-		for (String stage : List.of("3_0", "3_1", "3_2", "3_3", "3_4", "3_5", "4_0")) {
-			Recipe recipe = ENV.activateRecipes("com.eottabom.rewrite.spring.MigrateToSpringBoot_" + stage);
-			assertThat(recipe.getRecipeList()).as(stage).isNotEmpty();
-		}
+	@ParameterizedTest
+	@ValueSource(strings = { "3_0", "3_1", "3_2", "3_3", "3_4", "3_5", "4_0" })
+	void stageRecipesExist(String stage) {
+		Recipe recipe = ENV.activateRecipes("com.eottabom.rewrite.spring.MigrateToSpringBoot_" + stage);
+		assertThat(recipe.getRecipeList()).as(stage).isNotEmpty();
 	}
 
 }
